force-app/main/default/objects/Product_Registration__c/fields/Total_DOM_QF_Spend__c.field-meta.xml
<CustomField>
    <fullName>Total_DOM_QF_Spend__c</fullName>
    <label>QF Dom Revenue (FYTD)</label>
    <summarizedField>Travel_Tracker__c.Base_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Travel_Tracker__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Flights</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Travel_Tracker__c.Flight_Type__c</field>
        <operation>equals</operation>
        <value>Domestic</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Travel_Tracker__c.TY__c</field>
        <operation>equals</operation>
        <value>Y</value>
    </summaryFilterItems>
    <summaryForeignKey>Travel_Tracker__c.Customer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>