force-app/main/default/objects/Product_Registration__c/fields/Total_Revenue_LY__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue_LY__c</fullName>
    <label>Total Revenue (LY)</label>
    <summarizedField>Travel_Tracker__c.Base_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Travel_Tracker__c.LY__c</field>
        <operation>equals</operation>
        <value>Y</value>
    </summaryFilterItems>
    <summaryForeignKey>Travel_Tracker__c.Customer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>