force-app/main/default/objects/Product_Registration__c/fields/Transfer_Stored_Travellers__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Stored_Travellers__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick in case you want the team to transfer the stored travellers as part of QBD decommission.</inlineHelpText>
    <label>Transfer Stored Travellers?</label>
    <type>Checkbox</type>
</CustomField>