force-app/main/default/objects/Product_Registration__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AEQCC</fullName>
            </value>
            <value>
                <fullName>Aquire</fullName>
            </value>
            <value>
                <fullName>QBD</fullName>
            </value>
            <value>
                <fullName>AQBRC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>