force-app/main/default/objects/Product_Registration__c/fields/YTD_CV_COBRAND__c.field-meta.xml
<CustomField>
    <fullName>YTD_CV_COBRAND__c</fullName>
    <label>YTD CV COBRAND</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>