force-app/main/default/objects/Product_Registration__c/recordTypes/AMEX_Registration.recordType-meta.xml
<RecordType>
    <fullName>AMEX_Registration</fullName>
    <active>true</active>
    <description>To be used to capture information about AEQCC registration</description>
    <label>AEQCC Registration</label>
</RecordType>