force-app/main/default/objects/Product_Registration__c/recordTypes/Aquire_Registration.recordType-meta.xml
<RecordType>
    <fullName>Aquire_Registration</fullName>
    <active>true</active>
    <description>To be used to capture information about Aquire registration</description>
    <label>Aquire Registration</label>
</RecordType>