force-app/main/default/objects/Product_Registration__c/recordTypes/QBD_Registration.recordType-meta.xml
<RecordType>
    <fullName>QBD_Registration</fullName>
    <active>true</active>
    <description>To be used to capture information about QBD registration</description>
    <label>QBD Registration</label>
</RecordType>