force-app/main/default/objects/Product_Registration__c/validationRules/VR_To_Prevent_Editing_AMEX_Product_In_UI.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_To_Prevent_Editing_AMEX_Product_In_UI</fullName>
    <active>true</active>
    <description>Rule to enforce to prevention of edit any AMEX Product Registration other than Data Administartor User</description>
    <errorConditionFormula>$Setup.EnableValidationRule__c.VR_To_Prevent_Editing_AMEX_Product_In_UI__c &amp;&amp; 
RecordType.DeveloperName == &apos;AMEX_Registration&apos; &amp;&amp; NOT(ISNEW())</errorConditionFormula>
    <errorMessage>You are not entitled to Modify this record.Please contact the System Administrator for further assistance</errorMessage>
</ValidationRule>