force-app/main/default/objects/Product_Registration__c/listViews/AEQCC.listView-meta.xml
<ListView>
    <fullName>AEQCC</fullName>
    <columns>NAME</columns>
    <columns>ABN__c</columns>
    <columns>Type__c</columns>
    <columns>Account__c</columns>
    <columns>AMEX_Choice__c</columns>
    <columns>AMEX_Customer_Choice_Date__c</columns>
    <columns>Stage_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Process_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>AEQCC</value>
    </filters>
    <label>AEQCC</label>
</ListView>