force-app/main/default/objects/Product_Registration__c/listViews/All_QBD.listView-meta.xml
<ListView>
    <fullName>All_QBD</fullName>
    <columns>NAME</columns>
    <columns>QBD_Key_Contact_Name__c</columns>
    <columns>QBD_Key_Contact_Email__c</columns>
    <columns>QBD_Enrollment_Date__c</columns>
    <columns>QBD_Last_Modified_Date__c</columns>
    <columns>QBD_Business_Communication__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>QBD</value>
    </filters>
    <label>All QBD</label>
</ListView>