force-app/main/default/objects/Product_Registration__c/listViews/Aquire.listView-meta.xml
<ListView>
    <fullName>Aquire</fullName>
    <columns>Airline_Level__c</columns>
    <columns>NAME</columns>
    <columns>ABN__c</columns>
    <columns>Account__c</columns>
    <columns>Active__c</columns>
    <columns>Migrated__c</columns>
    <columns>Stage_Status__c</columns>
    <columns>Type__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>QBD_Enrollment_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Aquire</value>
    </filters>
    <label>Aquire</label>
</ListView>