force-app/main/default/objects/Product_Registration__c/listViews/QBD.listView-meta.xml
<ListView>
    <fullName>QBD</fullName>
    <columns>NAME</columns>
    <columns>ABN__c</columns>
    <columns>Account__c</columns>
    <columns>Active__c</columns>
    <columns>Migrated__c</columns>
    <columns>Stage_Status__c</columns>
    <columns>Type__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>QBD_Last_Modified_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>QBD</value>
    </filters>
    <label>QBD</label>
</ListView>